<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="SpringerMetaKey">ymszybnu762zws7eam5fpb39</string>
    <string name="SpringerMetaDataKey">6jtygkfmyeajyqbkcnu3gry4</string>
    <string name="SpringerOpenAccessKey">cpqdwvwc5n6k4svgpwz4qgdq</string>

    <string name="app_name"><xliff:g id="app_name">EasyReference</xliff:g></string>
    <string name="shortened_app_name"><xliff:g id="short_app_name">EasyRef</xliff:g></string>
    <string name="app_title"><xliff:g id="app_title">Easy Reference</xliff:g></string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="create_reference_list">Create Reference List</string>
    <string name="old_reference_lists">Old Reference Lists</string>
    <string name="reference_list">Reference List</string>
    <string name="choose_a_style">Choose a style</string>
    <string name="options">Options</string>
    <string name="reference_title_hint">enter title</string>
    <string name="new_list">New</string>
    <string name="add_new">Add new reference</string>
    <string name="new_reference">Add new reference</string>

    <!-- Empty list messages -->
    <string name="empty_reference_lists_title">You have no reference lists!</string>
    <string name="empty_reference_lists_text">Press the plus button below<xliff:g id="one_line_space">\n</xliff:g>to start adding reference lists</string>
    <string name="empty_reference_list_title">No references added</string>
    <string name="empty_reference_list_text">Press the plus button below<xliff:g id="one_line_space">\n</xliff:g>to start adding a reference</string>

    <!-- Strings for APA style -->
    <string name="new_apa_list">New APA Reference List</string>

    <!-- Strings for Harvard style -->
    <string name="new_harvard_list">New Harvard Reference List</string>

    <!-- Reference strings -->
    <string name="author">Author</string>
    <string name="author_hint">enter author names</string>
    <string name="year">Year</string>
    <string name="year_hint">enter publishing year</string>
    <string name="title">Title</string>
    <string name="title_hint">enter list title</string>
    <string name="subtitle">Subtitle (optional)</string>
    <string name="subtitle_hint">enter subtitle</string>
    <string name="location">Location</string>
    <string name="location_hint">enter location of publishing</string>
    <string name="publisher">Publisher</string>
    <string name="publisher_hint">enter publisher</string>
    <string name="doi">DOI</string>
    <string name="issn">ISSN</string>
    <string name="isbn">ISBN</string>
    <string name="search">Search</string>

    <string name="result_publisher">Publisher:</string>
    <string name="result_publication">Publication:</string>
    <string name="result_publication_date">Publication Date:</string>
    <string name="result_volume">Volume:</string>
    <string name="search_hint">enter a search value</string>
    <string name="book">Book</string>
    <string name="journal">Journal</string>
    <string name="book_chapter">Book Chapter</string>
    <string name="web_page_or_document">Web Page/Web Document</string>
    <string name="web_document">Web Document</string>
    <string name="apa_reference_list">APA Reference List</string>
    <string name="harvard_reference_list">Harvard reference list</string>
    <string name="issue_hint">enter issue</string>
    <string name="issue">Issue</string>
    <string name="page_no">Page No.</string>
    <string name="page_no_hint">enter page number</string>
    <string name="doi_hint">enter DOI</string>
    <string name="journal_title">Journal Title</string>
    <string name="journal_title_hint">enter title of journal</string>
    <string name="volume_number">Volume Number</string>
    <string name="volume_number_hint">enter volume number</string>
    <string name="apa_journal_reference">APA Journal Reference</string>
    <string name="apa_book_reference">APA Book Reference</string>
    <string name="apa_web_reference">APA Web Reference</string>
    <string name="apa_book_chapter_reference">APA Book Chapter Reference</string>
    <string name="selecty_type">Select Type</string>
    <string name="no_title">No Title</string>
    <string name="references">References</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="chapter_sub_title">Chapter Subtitle (optional)</string>
    <string name="book_title">Book Title</string>
    <string name="book_sub_title">Book Subtitle (optional)</string>
    <string name="editors">Editors</string>
    <string name="editors_hint">first initial. last name</string>
    <string name="in">In</string>
    <string name="eds">(Eds.)</string>
    <string name="pages_of_chapter">Pages of Chapter</string>
    <string name="pages_hint">Enter the page numbers that were used e.g. 1–5</string>
    <string name="pp">pp.</string>
    <string name="url">URL</string>
    <string name="url_hint">enter a url</string>
    <string name="date_of_publication">Date of Publication</string>
    <string name="date_hint">enter date of publication</string>

    <string name="missing_title">Missing <xliff:g id="title" example="First Name">%s</xliff:g></string>
    <string name="missing_body">A <xliff:g id="title" example="First Name">%s</xliff:g> must be supplied</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="tap_to_edit_reference">Tap to edit reference!</string>
    <string name="add_author">add<xliff:g id="one_line_space">\n</xliff:g>author</string>
    <string name="first_name_hint">enter first name</string>
    <string name="middle_name_hint">enter middle name</string>
    <string name="last_name_hint">enter last name</string>
    <string name="email_text">\n\nReference List generated in </string>
    <string name="list_deleted">List Deleted!</string>
    <string name="click_to_undo">Click to undo</string>
    <string name="no_results">No results for search</string>
    <string name="search_info">Here you can search the Springer database!</string>
    <string name="no_results_toast">No results found for search</string>
    <string name="author_info_message">Add an author in the format of Last Name, First Initial. Second Initial. e.g. Melville, H. You can also use the add author dialog to do the work for you!</string>
    <string name="add_year_message">The year that the resource was published. Pretty self explanatory, just 4 numbers. e.g 1851</string>
    <string name="add_web_year_message">The year that the web page was last updated. Like the year used for other resource types, just 4 numbers. e.g 2015</string>
    <string name="add_title_message">Add the title of the resource. The title starts with a capital while every other letter is lower case. e.g. Moby dick</string>
    <string name="add_subtitle_message">Add the subtitle of the resource here if it has one. Like the title, it starts with a capital letter and everything else is lowercase. e.g. The whale</string>
    <string name="add_location_hint">Add the location of publishing. If in America put City, State Code. If anywhere else put City, Country Name. e.g. London, Great Britain</string>
    <string name="add_publisher_message">Add the publisher of the resource. This should be exactly as written within the document. e.g.Richard Bentley</string>
    <string name="add_chapter_title_message">Add the chapter of the book that the information came from. This should start with a capital while all other letters are lowercase. e.g. Chapter 1</string>
    <string name="add_chapter_subtitle_message">Add the subtitle of the chapter that was used, if one exists. This should start with a capital letter while all others are lowercase. e.g. Loomings</string>
    <string name="add_pages_of_chapter_message">Add the pages of the chapter that the information was retrieved from. e.g. 1<xliff:g id="dash">-</xliff:g>3</string>
    <string name="add_editors_message">Add the editors of the chapter. This follows the opposite format of authors. In other words First Initial. Last Name. e.g. H. Melville</string>
    <string name="add_journal_title_message">Add the title of the journal article. This should start with a capital while all other letters are lowercase. e.g. Deconstructing moby</string>
    <string name="add_volume_number_message">Add the volume number of the journal this article appeared in. e.g. 1</string>
    <string name="add_issue_message">Add the numer of the issue of the journal that this article appeared in. e.g. 4</string>
    <string name="add_pages_message">Add the pages of the journal that contain the information that was used. e.g. 3<xliff:g id="dash">-</xliff:g>7</string>
    <string name="add_doi_message">Add the DOI of the journal article. All DOI\'s should follow the same format. e.g. 10.1000/182</string>
    <string name="add_url_message">Add the URL that the resource was retrieved from. e.g. http://www.sparknotes.com/lit/mobydick/</string>
    <string name="undo">Undo</string>
    <string name="deleted">"Deleted "</string>
    <string name="chapter">Chapter</string>
    <string name="web">Web</string>
</resources>
