<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:text="@string/author"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="52dp"
                    android:maxLines="4"
                    android:inputType="textCapWords"
                    android:hint="@string/author_hint"/>

                <Button
                    android:id="@+id/author_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/add_author"
                    android:background="@drawable/rounded_red_button"/>
            </LinearLayout>

            <TextView
                android:id="@+id/year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:text="@string/year"/>

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="number"
                android:hint="@string/year_hint"/>

            <TextView
                android:id="@+id/journal_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/light_gray"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:text="@string/title"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/reference_title_hint"/>

            <TextView
                android:id="@+id/subtitle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/subtitle"/>

            <EditText
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/subtitle_hint"/>

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/journal_title"/>

            <EditText
                android:id="@+id/journal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/journal_title_hint"/>

            <TextView
                android:id="@+id/volume_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/volume_number"/>

            <EditText
                android:id="@+id/volume_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="number"
                android:hint="@string/volume_number_hint"/>

            <TextView
                android:id="@+id/issue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/issue"/>

            <EditText
                android:id="@+id/issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="number"
                android:hint="@string/issue_hint"/>

            <TextView
                android:id="@+id/page_no_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/page_no"/>

            <EditText
                android:id="@+id/page_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:hint="@string/page_no_hint"/>

            <TextView
                android:id="@+id/doi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:drawablePadding="4dp"
                android:textColor="@color/light_gray"
                android:text="@string/doi"/>

            <EditText
                android:id="@+id/doi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:hint="@string/doi_hint"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>