<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/author"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="52dp"
                    android:maxLines="4"
                    android:inputType="textCapWords"
                    android:hint="@string/author_hint"/>

                <Button
                    android:id="@+id/author_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/add_author"
                    android:background="@drawable/red_ripple"/>
            </LinearLayout>

            <TextView
                android:id="@+id/year_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/year"/>

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="number"
                android:hint="@string/year_hint"/>

            <TextView
                android:id="@+id/book_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/light_gray"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/chapter_title"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/title_hint"/>

            <TextView
                android:id="@+id/book_subtitle_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/light_gray"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/chapter_sub_title"/>

            <EditText
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/subtitle_hint"/>

            <TextView
                android:id="@+id/editors_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/light_gray"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/editors"/>

            <EditText
                android:id="@+id/editors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapWords"
                android:hint="@string/editors_hint"/>

            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:textColor="@color/light_gray"
                android:text="@string/book_title"/>

            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/title_hint"/>

            <TextView
                android:id="@+id/subtitle_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/light_gray"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/book_sub_title"/>

            <EditText
                android:id="@+id/book_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:inputType="textCapSentences"
                android:hint="@string/subtitle_hint"/>

            <TextView
                android:id="@+id/pages_of_chapter_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:textColor="@color/light_gray"
                android:text="@string/pages_of_chapter"/>

            <EditText
                android:id="@+id/pages_of_chapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:hint="@string/pages_hint"/>

            <TextView
                android:id="@+id/location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/location"/>

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textCapWords"
                android:hint="@string/location_hint"/>

            <TextView
                android:id="@+id/publisher_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/info"
                android:text="@string/publisher"/>

            <EditText
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textCapWords"
                android:hint="@string/publisher_hint"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>