<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/easy_reference_red"/>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/plus_button"
               android:layout_width="56dp"
               android:layout_height="56dp"
               android:transitionName="plus_button"
               android:background="@drawable/red_circle_ripple"
               android:src="@drawable/icon_plus"
               android:padding="14dp"
               android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/book"
        style="@style/ReferenceTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:visibility="gone"
        android:translationY="-64dp"/>

    <TextView
        android:id="@+id/journal"
        style="@style/ReferenceTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/journal"
        android:visibility="gone"
        android:translationX="82dp"/>

    <TextView
        android:id="@+id/chapter"
        style="@style/ReferenceTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter"
        android:visibility="gone"
        android:translationY="64dp"/>

    <TextView
        android:id="@+id/web"
        style="@style/ReferenceTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:visibility="gone"
        android:translationX="-82dp"/>
</RelativeLayout>